--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>DevLinks</title>
+    <title>MyLink</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -24,7 +24,7 @@
         <button></button>
         <span> </span>
       </div>
-        <p id="site">《Sites utilizados》</p>
+        <p id="site">Sites utilizados</p>
       <ul>
         <li>
           <a href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwiwh6P1wemAAxWD4FwKHcofBogYABAAGgJjZQ&gclid=Cj0KCQjw0IGnBhDUARIsAMwFDLkIWunNJ1CMkxz6GLusNHFFbutfAqcVblYhouZGFwwg3Bnh48axGPcaAvgVEALw_wcB&ohost=www.google.com&cid=CAESbOD2ygtdFj-rpKGqyzHrpaq_l-kEtthvisE_2KNNg55xGnDw4aFGgQ-9_wQ8UtLTW4SgVj_TbjmWM2QlBPqdgnpXf1i_dqsvYC51S2eAylZ30tKVLt8enQt9amM7_KMbG1jPbNEM7pgrmSYCrw&sig=AOD64_0so_GONywmLWtJ0O-EemEQPizPfQ&q&adurl&ved=2ahUKEwibpp31wemAAxUHiJUCHTdSDNAQ0Qx6BAgOEAE" target="_blank"><ion-icon name="rocket-outline"></ion-icon>&nbsp;Rocketseat</a>
@@ -55,8 +55,8 @@
         <a href="https://www.linkedin.com/in/pedro-luiz-moreira-mariano-001120175/" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
-        <a href="https://www.tiktok.com/@pedroluizmm" target="_blank">
-          <ion-icon name="logo-tiktok"></ion-icon>
+        <a href="https://open.spotify.com/user/313nagx25pvwlbqufj2ykpn6sjxa" target="_blank">
+          <ion-icon name="musical-notes-outline"></ion-icon>
         </a>
       </div>
       <footer>
