--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
         <a href="https://github.com/pedroluizmm" target="_blank">
           <ion-icon name="logo-github"></ion-icon>
         </a>
-        <a href="https://www.instagram.com/pedroluiz_mm/" target="_blank">
+        <a href="https://www.instagram.com/pedroluizyx/" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
         <a href="https://www.linkedin.com/in/pedro-luiz-moreira-mariano-001120175/" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
-        <a href="https://open.spotify.com/user/313nagx25pvwlbqufj2ykpn6sjxa" target="_blank">
-          <ion-icon name="musical-notes-outline"></ion-icon>
+        <a href="https://www.youtube.com/@cww2464" target="_blank">
+          <ion-icon name="logo-youtube"></ion-icon>
         </a>
       </div>
       <footer>
